@@ -86,6 +86,8 @@
  * 28-Jan-2008 : Reset fixed range axis space in subplots for each call to
  *               draw() (DG);
  * 27-Mar-2008 : Add documentation for getDataRange() method (DG);
+ * 31-Mar-2008 : Updated getSubplots() to return EMPTY_LIST for null 
+ *               subplots, as suggested by Richard West (DG);
  *
  */
 
@@ -319,12 +321,18 @@ public class CombinedDomainXYPlot extends XYPlot
     }
 
     /**
-     * Returns the list of subplots.
+     * Returns the list of subplots.  The returned list may be empty, but is
+     * never <code>null</code>.
      *
      * @return An unmodifiable list of subplots.
      */
     public List getSubplots() {
-        return Collections.unmodifiableList(this.subplots);
+    	if (this.subplots != null) {
+            return Collections.unmodifiableList(this.subplots);
+    	}
+    	else {
+    		return Collections.EMPTY_LIST;
+    	}
     }
 
     /**
